@@ -1,3 +1,8 @@
+2017-05-10  Alexandre Oliva <aoliva@redhat.com>
+
+	* tree-inline.c (expand_call_inline): Split block at stmt
+	before the call.
+
 2017-05-09  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	PR target/68163
